--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="nav">
             <ul>
-                <li><a href="https://cen73/chen73.github.io">首页</a></li>
+                <li><a href=" https://cen73.github.io/chen73.github.io/">首页</a></li>
                 <li><a href="/img.html">图库</a></li>
                 <li><a href="" id="about">关于我</a></li>
                 <!-- <li><a href="">首页</a></li> -->
