--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="nav">
             <ul>
                 <li><a href=" https://cen73.github.io/chen73.github.io/">首页</a></li>
-                <li><a href="/img.html">图库</a></li>
+                <li><a href="https://cen73.github.io/chen73.github.io/img.html">图库</a></li>
                 <li><a href="" id="about">关于我</a></li>
                 <!-- <li><a href="">首页</a></li> -->
             </ul>
