--- a/img.html
+++ b/img.html
@@ -105,8 +105,8 @@
 
         <div class="nav">
             <ul>
-                <li><a href="http://127.0.0.1:5500/">首页</a></li>
-                <li><a href="" target="_blank">图库</a></li>
+                <li><a href="https://cen73.github.io/chen73.github.io/">首页</a></li>
+                <li><a href="https://cen73.github.io/chen73.github.io/img.html" target="_blank">图库</a></li>
                 <li><a href="" id="about">关于我</a></li>
                 <!-- <li><a href="">首页</a></li> -->
             </ul>
