--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             background-color: #3399ff;
-            background-image: url(images/MIKU18.png);
+            background-image: url(./images/MIKU18.png);
             background-repeat: no-repeat;
             background-size: cover;
 
