--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         body {
-           
+            background-color: #3399ff;
             background-image: url(MIKU18.png);
             background-repeat: no-repeat;
             background-size: cover;
