--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         $(window).on("load", function () {
             let endTime = Date.now();
             let elapsed = endTime - startTime;
-            let minimumTime = 300; // 设置最短显示时间：2秒（2000ms）
+            let minimumTime = 900; 
 
             let remainingTime = minimumTime - elapsed;
 
